--- a/index.html
+++ b/index.html
@@ -7,32 +7,32 @@
             <h1>Calculator</h1>
             <div class="calculator">
                 <div class="screen">
-                <div class="screen-last"></div>
-                <div class="screen-display">0</div>
+                <div data-previous-operand class="previous-operand"></div>
+                <div data-current-operand class="current-operand">0</div>
                 </div>
             <div class="buttons">
-                <button id="clear">CLEAR</button>
-                <button id="delete">DELETE</button>
+                <button id="clear"data-all-clear>CLEAR</button>
+                <button id="delete"data-delete>DELETE</button>
 
-                <button id="seven"data-number>7</button>
-                <button id="eight"data-number>8</button>
-                <button id="nine"data-number>9</button>
-                <button id="divide"data-number>÷</button>
+                <button data-number>7</button>
+                <button data-number>8</button>
+                <button data-number>9</button>
+                <button data-operater>÷</button>
 
-                <button id="four"data-number>4</button>
-                <button id="five"data-number>5</button>
-                <button id="six"data-number>6</button>
-                <button id="multiply">x</button>
+                <button data-number>4</button>
+                <button data-number>5</button>
+                <button data-number>6</button>
+                <button data-operater>x</button>
 
-                <button id="one"data-number>1</button>
-                <button id="two"data-number>2</button>
-                <button id="three"data-number>3</button>
-                <button id="minus">-</button>
+                <button data-number>1</button>
+                <button data-number>2</button>
+                <button data-number>3</button>
+                <button data-operater>-</button>
 
-                <button id="dot">.</button>
-                <button id="null"data-number>0</button>
-                <button id="equal">=</button>
-                <button id="plus">+</button>
+                <button data-number>.</button>
+                <button data-number>0</button>
+                <button data-equals>=</button>
+                <button data-operater>+</button>
             </div>
             </div>
         </div>
